--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,9 +8,9 @@
       "type": "node",
       "request": "launch",
       "name": "Launch Zoroaster",
-      "program": "${workspaceFolder}/node_modules/.bin/zoroaster",
+      "program": "${workspaceFolder}/node_modules/zoroaster/depack/bin/zoroaster.js",
       "env": {
-        // "NODE_DEBUG": "my-new-package",
+        // "NODE_DEBUG": "amazing-package",
       },
       "console": "integratedTerminal",
       "args": [
@@ -26,7 +26,7 @@
       "type": "node",
       "request": "launch",
       "name": "Launch Example",
-      "program": "${workspaceFolder}/node_modules/.bin/alanode",
+      "program": "${workspaceFolder}/node_modules/alamode/build/alanode.js",
       "console": "integratedTerminal",
       "args": [
         "example"
