--- a/package.json
+++ b/package.json
@@ -1,40 +1,35 @@
 {
-  "name": "my-new-package",
+  "name": "amazing-package",
   "version": "0.0.0-pre",
-  "description": "{{ description }}",
+  "description": "Hello World",
   "main": "compile/index.js",
   "module": "src/index.js",
   "scripts": {
     "t": "zoroaster -a",
-    "test": "yarn t test/spec test/mask",
-    "spec": "yarn t test/spec",
-    "mask": "yarn t test/mask",
+    "test": "npm run t test/spec test/mask",
+    "spec": "npm run t test/spec",
+    "mask": "npm run t test/mask",
     "dev": "node src/bin",
-    "compile": "depack src/bin/mnp -o compile/bin/mnp.js -a -c -S --externs types/externs.js",
-    "lib": "depack src/depack.js -o compile/mnp.js -a -c --source_map_include_content",
-    "stdlib": "depack src/stdlib.js -o stdlib/index.js -a -c -p --source_map_include_content",
-    "test-build": "yarn test -e test-build",
-    "test-compile": "yarn test -e test-compile",
+    "compile": "depack src/bin/amazing-package -o compile/bin/amazing-package.js -a -c -S --externs types/externs.js",
+    "lib": "depack src/depack.js -o compile/amazing-package.js -a -c --source_map_include_content",
+    "test-compile": "npm test -- -- -e test-compile",
     "lint": "eslint .",
-    "doc": "doc -o README.md -n _myNewPackage -a -d",
-    "wiki": "doc wiki -W wiki.git -n _myNewPackage -a -d",
-    "b": "alamode src -o build -i stdlib.js -s --env build",
-    "d": "yarn-s template d1 externs",
+    "doc": "doc -o README.md -n _amazingPackage -a -d",
+    "wiki": "doc wiki -W wiki.git -n _amazingPackage -a -d",
+    "d": "npm-s template d1 externs",
     "d1": "typal compile/index.js types/index.js -u -t types/index.xml",
-    "d2": "typal src -u -t types/index.xml",
     "template": "typal compile/template.js -T compile/index.js -t types/api.xml",
     "externs": "typal types/externs.js",
-    "args": "argufy -o src/bin/get-args.js"
+    "args": "argufy -o src/bin/get-args.js",
+    "alanode": "alanode"
   },
   "bin": {
-    "mnp": "compile/bin/mnp.js",
-    "mnp-dev": "src/bin/index.js"
+    "amazing-package": "compile/bin/amazing-package.js",
+    "amazing-package-dev": "src/bin/index.js"
   },
   "files": [
-    "build",
     "src",
     "compile",
-    "stdlib",
     "types/externs.js",
     "types/index.js",
     "src/bin/index.js",
@@ -43,16 +38,19 @@
   "externs": "types/externs.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/mnpjs/package.git"
+    "url": "git://github.com/4r7d3c0/amazing-package.git"
   },
   "typedefs": "typedefs.json",
-  "keywords": [],
-  "author": "{{ author_name }} <{{ author_email }}>",
-  "license": "{{ license_spdx }}",
+  "keywords": [
+    "hello",
+    "world"
+  ],
+  "author": "Anton <anton@adc.sh>",
+  "license": "AGPL-3.0",
   "bugs": {
-    "url": "{{ repo.html_url }}/issues"
+    "url": "https://github.com/4r7d3c0/amazing-package/issues"
   },
-  "homepage": "{{ homepage }}",
+  "homepage": "https://github.com/4r7d3c0/amazing-package#readme",
   "devDependencies": {
     "@artdeco/npm-s": "^1.0.1",
     "alamode": "^3.4.1",
@@ -64,7 +62,6 @@
     "indicatrix": "^1.4.1",
     "typal": "^1.26.2",
     "usually": "^1.2.0",
-    "yarn-s": "1.2.3",
     "zoroaster": "^4.3.0"
   }
 }
